objects/Person_Financial_Account_Junction__c.object
<CustomObject>
    <description>Creates a junction between Person Account and Financial Account to create a many-to-many relationship for Consume Deposits</description>
    <fields>
        <fullName>CIF_JHA_LINK__c</fullName>
        <description>Combination of CIF and JHA Unique Id for upserting links</description>
        <externalId>true</externalId>
        <label>CIF JHA LINK</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CIF__c</fullName>
        <formula>LEFT( CIF_JHA_LINK__c, FIND( &quot;|&quot;, CIF_JHA_LINK__c) - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Balance_Formula__c</fullName>
        <formula>Financial_Account__r.Current_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Brand__c</fullName>
        <formula>TEXT( Financial_Account__r.Brand__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account_ID__c</fullName>
        <formula>CASESAFEID( Financial_Account__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Maturity_Date__c</fullName>
        <formula>Financial_Account__r.Maturity_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Open_Date__c</fullName>
        <formula>Financial_Account__r.Open_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Ownership__c</fullName>
        <formula>Financial_Account__r.Ownership__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ownership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Promo_Code__c</fullName>
        <formula>Financial_Account__r.Promo_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promo Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Status_Formula__c</fullName>
        <formula>TEXT(Financial_Account__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Person Accounts</relationshipLabel>
        <relationshipName>Person_Financial_Account_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JHA_Record_ID__c</fullName>
        <formula>RIGHT( CIF_JHA_LINK__c , LEN(CIF_JHA_LINK__c) - FIND(&quot;|&quot;, CIF_JHA_LINK__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JHA Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Account_Email__c</fullName>
        <formula>Person_Account__r.PersonContact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Account_ID__c</fullName>
        <formula>CASESAFEID( Person_Account__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Account_Last_Activity__c</fullName>
        <formula>Person_Account__r.LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Account Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Person_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Consumer Deposits Person Accounts may be selected</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Consumer Deposits Person Accounts</value>
            </filterItems>
            <infoMessage>Only Consumer Deposits Person Accounts may be selected</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>Person_Financial_Account_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>To be populated by automated ETL process when Person Financial Account Links are created</description>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Person Financial Account Link</label>
    <nameField>
        <displayFormat>PFAL-{YYYYMMDD}-{0000}</displayFormat>
        <label>Person Financial Account Link #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Person Financial Account Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>